--- a/inten.html
+++ b/inten.html
@@ -14,7 +14,7 @@
     <div class="l">
     <h1>MUSIC <br> PRODUCTION <br> COURSES</h1>
     <P>The customer is very important, the customer will be followed <br> by the customer. Each one lays down the pure of life, and <br> there is no time to drink it. He was born in a hospital and was <br> born with penates</P>
-    <button type="button" style="background-color:white;">Get started</button>
+    <button type="button" style="background-color:rgb(71, 212, 130);"> <b>LOGIN</b> </button>
 </div>
 <div class="d">
     <h1>Our Program</h1>
@@ -22,26 +22,26 @@
 </div>
 <section class="row">
     <div class="column1">
-      <img src="1669993088-rsz_caught-in-joy-pukzsai_k5o-unsplash-min.jpg"  style="width:100%" >
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit fusce amet mollis metus.</p>
+      <img src="20231211233628730.jpg"  style="width:100%" >
+      <p>A keyboard instrument is a musical instrument that is played by pressing keys to produce sounds.</p>
     </div>
     <div class="column2">
-      <img src="16f532_fad32ff2d4c0467ca7bae2e0046adfe1_mv2.jpg"  style="width:100%">
-      <p>Maecenas quis neque et ex bibendum congue a nec velit nunc ante tortor.</p>
+      <img src="20231211233546801.jpg"  style="width:100%">
+      <p>The guitar is a popular string instrument played by strumming or plucking its strings.</p>
     </div>
     <div class="column3">
-      <img src="5-steps-to-start-out-as-a-music-producer-main.jpg"  style="width:100%">
-      <p>Donec iaculis ligula sit amet tellus dapibus pulvinar duis eu sapien volutpat libero</p>
+      <img src="20231211233610099.jpg"  style="width:100%">
+      <p>DJs are skilled artists who create amazing music mixes and keep the party going.</p>
     </div>
 </section>
 <div class="last"> 
     <div class="pra">
     <h1 style="color: black;">Learn how to work with <br> professional recording <br> equipment</h1>
-    <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Donec vitae est vel dui ullamcorper congue sit amet sed <br> mauris. Vivamus facilisis enim sit amet vestibulum.</p>
-     <button class="btn" style="color: antiquewhite;">Get started</button>
+    <p style="color: black;">When working with processes, it's crucial to have a clear understanding<br> of the task. Break it down into smaller, manageable steps and allocate<br> the necessary resources. Prioritize tasks based on importance and urgency,<br> and regularly review your progress. By following these steps, you can work effectively and efficiently with processes.</p>
+     <button class="btn" > Get started</button>
   </div>
     <div>
-      <img src="1669993088-rsz_caught-in-joy-pukzsai_k5o-unsplash-min.jpg" class=" r1">
+      <img src="20231211234407444.jpg" class=" r1">
       </div>
 </div>
 
