Pending changes exported from your codespace

--- a/inten.html
+++ b/inten.html
@@ -22,15 +22,15 @@
 </div>
 <section class="row">
     <div class="column1">
-      <img src="20231211233628730.jpg"  style="width:100%" >
+      <img src="20231211233628730.jpg" alt="ex0" style="width:100%" >
       <p>A keyboard instrument is a musical instrument that is played by pressing keys to produce sounds.</p>
     </div>
     <div class="column2">
-      <img src="20231211233546801.jpg"  style="width:100%">
+      <img src="20231211233546801.jpg"  alt="ex1" style="width:100%">
       <p>The guitar is a popular string instrument played by strumming or plucking its strings.</p>
     </div>
     <div class="column3">
-      <img src="20231211233610099.jpg"  style="width:100%">
+      <img src="20231211233610099.jpg" alt="ex2" style="width:100%">
       <p>DJs are skilled artists who create amazing music mixes and keep the party going.</p>
     </div>
 </section>
@@ -41,7 +41,7 @@
      <button class="btn" > Get started</button>
   </div>
     <div>
-      <img src="20231211234407444.jpg" class=" r1">
+      <img src="20231211234407444.jpg" alt="ex3" class=" r1">
       </div>
 </div>
 
